# video-compressor

./: LICENSE  README.md  index.html  package-lock.json  package.json
.claude/: settings.json  settings.local.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: analyzer.rs  compressor.rs  encoder.rs  ffmpeg.rs  lib.rs  preset.rs
src/router/: index.ts
src/stores/: app.ts
src/types/: index.ts
src/views/: CompressView.vue  TrimView.vue
